feat: booking endpoints
